fix(clients): create organizations atomically
